# slog-opentelemetry

./: Cargo.toml  README.md
examples/otlp/: main.rs
examples/stdout/: main.rs
src/: lib.rs
